docs: capitalize openAPI tags
